<resources>
    <string name="app_name">FlightBooking</string>
    <string name="aeroconnect">AeroConnect</string>
    <string name="intro_title">Fly anywhere easily\nwithout obstacles</string>
    <string name="intro_subtitle">Experience the unparalled\nfreedom of hinderness\n flight as you effortlessly travel</string>
    <string name="get_started">Get Started</string>
    <string name="i_have_an_account">I have an account</string>
</resources>