<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/intro_pic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/aeroconnect"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_title"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="31sp"
            android:textAlignment="center"/>


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_subtitle"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="24sp"
            android:layout_marginBottom="24sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            style="@android:style/Widget.Button"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/startbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textColor="@color/blue"
            android:background="@drawable/light_blue_btn_bg"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            style="@android:style/Widget.Button"
            android:background="@drawable/stroke_bg"
            android:textStyle="bold"
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_have_an_account"
            android:textSize="18sp"
            android:textColor="@color/white"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>